<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterTest</string>
    <string name="action_settings">Settings</string>
    <string name="title">欢迎注册</string>
    <string name="name">用户名：</string>
    <string name="tishi01">不能为空</string>
    <string name="psd">密码：</string>
    <string name="tishi02">6~15位</string>
    <string name="psd2">确认密码：</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="city">所在地：</string>
    <string name="register">注册</string>
    <string name="resultName">您的用户名为：</string>
    <string name="resultPsd">您的密码为：</string>
    <string name="resultGender">您的性别为：</string>
    <string name="resultCity">您的所在地为：</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">恭喜你，注册成功</string>
    <string name="title_activity_choose_city">ChooseCityActivity</string>

</resources>